--- a/Noticias Cidade/index.html
+++ b/Noticias Cidade/index.html
@@ -7,11 +7,31 @@
 	
 </head>
 <body background="imagens/fundo.png">
+	<div id="container">
 	<div><img class="fototopo" src="imagens/detalhe-topo.png">
-		<div>
-
+		<div class="nomeLogo">
+			<img src="imagens/logo.png">
 		</div>
+		<div class="conteudo1">
+			<h2>Entrevistas</h2>
+		</div>
+		<div class="conteudo2">
+			<h2>Ultimas Entrevistas</h2>
+			<h3>Medicos Residentes</h3>
+			<img width="100%" src="imagens/doutor.jpg" alt="">
+			<p>LoreinpsonLoreinpsonLoreinpson
+				LoreinpsonLoreinpsonLoreinpson</p>
+				<a href="leia">Leia mais...</a>
+		</div>
+		<div class="conteudo3">
+			<h2>Destaques</h2>
+		</div>
+		
+
 	</div>
+</div>
+	
+				
 
 </body>
 
