--- a/Noticias Cidade/index.html
+++ b/Noticias Cidade/index.html
@@ -7,31 +7,31 @@
 	
 </head>
 <body background="imagens/fundo.png">
-	
+	<ul id="menu">
+		<li>
+			<a href="index.html">Home</a>
+		</li>
+		<li>
+			<a href="brasil.html">Brasil</a>
+		</li>
+		<li>
+			<a href="internacional.html">Internacional</a>
+		</li>
+		<li>
+			<a href="economia.html">Economia</a>
+		</li>
+		<li>
+			<a href="saude.html">Saúde</a>
+		</li>
+		<li>
+			<a href="ciencia.html">Ciencias</a>
+		</li>
+		<li>
+			<a href="fotos.html">Fotos</a>
+		</li>
+	</ul>
 	<div id="container">
-		<ul id="menu">
-			<li>
-				<a href="index.html">Home</a>
-			</li>
-			<li>
-				<a href="index.html">Brasil</a>
-			</li>
-			<li>
-				<a href="index.html">Internacional</a>
-			</li>
-			<li>
-				<a href="index.html">Economia</a>
-			</li>
-			<li>
-				<a href="index.html">Saúde</a>
-			</li>
-			<li>
-				<a href="index.html">Ciencias</a>
-			</li>
-			<li>
-				<a href="index.html">Fotos</a>
-			</li>
-		</ul>
+		
 	<div><img class="fototopo" src="imagens/detalhe-topo.png">
 		<div class="nomeLogo">
 			<img src="imagens/logo.png">
